@@ -1,7 +1,7 @@
 %% -*- Mode:TeX; Fonts:(hl12fb) -*-
 %% *-* File: /usr/local/gbbopen/doc-source/acknowledgments.tex *-*
-%% *-* Last-Edit: Sat Apr 10 10:48:56 2010; Edited-By: cork *-*
-%% *-* Machine: cyclone.cs.umass.edu *-*
+%% *-* Last-Edit: Mon Mar 21 04:13:39 2011; Edited-By: cork *-*
+%% *-* Machine: twister.local *-*
 
 %% Copyright (C) 2003-2008, Dan Corkill <corkill@GBBopen.org>
 %% Part of the GBBopen Project.
@@ -45,8 +45,6 @@ Werkowski, and \xsitelink{Huzaifa Zafar}{http://www.cs.umass.edu/~hzafar/}.
 \xsitelink{Franz Inc.}{http://www.franz.com} and \xsitelink{LispWorks
   Ltd.}{http://www.lispworks.com} provided (and continue to provide)
 Common Lisp licenses and technical support to the Project.
-\xsitelink{BBTech Corporation}{http://BBTech.com} provided hardware
-and Internet resources.  
 
 Some early design work for GBBopen was supported by DARPA's Information
 Exploitation Office (\xsitelink{IXO}{http://dtsn.darpa.mil/ixo/}) under
