@@ -70,6 +70,10 @@
 \command{:fi}{\var{instance-name\/}
    \textrm{[}\var{unit-classes-specifier\/}\textrm{]}}%
   {Find unit instance by name (sets \code{=})}%
+\command{:fsi}{\parbox[t]{2.7in}{\var{instance\/} \vbar\\
+   \{\var{instance-name\/}
+   \textrm{[}\var{unit-classes-specifier\/}\textrm{]}\}}}%
+  {Find space instance by path (sets \code{=})}%
 \command{:pic}{\textrm{[}\var{unit-classes-specifier\/}\textrm{]}}%
   {Print instances of class}%
 
