@@ -42,8 +42,6 @@ Werkowski, and <a target="_top" href="http://www.cs.umass.edu/~hzafar/">Huzaifa 
 <a target="_top" href="http://www.franz.com">Franz Inc.</a> and <a target="_top" href="http://www.lispworks.com">LispWorks
 Ltd.</a> provided (and continue to provide)
 Common Lisp licenses and technical support to the Project.
-<a target="_top" href="http://BBTech.com">BBTech Corporation</a> provided hardware
-and Internet resources.  
 </p>
 <p>Some early design work for GBBopen was supported by DARPA's Information
 Exploitation Office (<a target="_top" href="http://dtsn.darpa.mil/ixo/">IXO</a>) under
