@@ -45,7 +45,8 @@ Important changes since GBBopen 1.5:
        WITH-READING-SAVED/SENT-OBJECTS-BLOCK
 
   * Changes to GBBopen
-     - New *SKIP-DELETED-UNIT-INSTANCE-CLASS-CHANGE* variable
+     - New *SKIP-DELETED-UNIT-INSTANCE-CLASS-CHANGE* and 
+       *REPOSITORY-LOAD-PERCENTAGE-HOOK-FUNCTIONS* variables
      - New CHECK-INSTANCE-LOCATORS function
      - New WITH-BLACKBOARD-REPOSITORY-LOCKED macro
      - Documented *FIND-VERBOSE*, *USE-MARKING*, CHECK-FOR-DELETED-INSTANCE
